Compatibility with Java 17.
Resolves #7